<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="short_app_name">My Story</string>
    <string name="full_app_name">Android Movie Studio</string>
     <string name="shipped_ffmpeg_version">n2.4.2</string>
    <string name="editor_loading_project">Loading project\u2026</string>
    <string name="editor_no_project">No project found.</string>
    <string name="editor_add">Add</string>
    <string name="editor_import_video">Import video clip</string>
    <string name="editor_import_image">Import image</string>
    <string name="editor_import_audio">Import music</string>
    <string name="editor_share_movie">Share movie</string>
    <string name="editor_export_movie">Export movie</string>
    <string name="editor_play_exported_movie">Play exported movie</string>
    <string name="editor_change_aspect_ratio">Change aspect ratio</string>
    <string name="editor_edit_project_name">Change project name</string>
    <string name="editor_delete_project">Delete project</string>
    <string name="editor_capture_video">Record a video</string>
    <string name="editor_capture_image">Take a photo</string>
    <string name="editor_delete_project_question">Do you want to delete this project?</string>
    <string name="editor_zero_time_stamp">00:00:00.0</string>
    <string name="editor_remove_audio_track_question">Do you want to remove this audio track?</string>
    <string name="editor_title_menu_header">Title</string>
    <string name="editor_add_overlay">Add title</string>
    <string name="editor_edit_overlay">Edit title</string>
    <string name="editor_remove_overlay">Remove title</string>
    <string name="editor_remove_overlay_question">Do you want to remove this overlay?</string>
    <string name="editor_change_rendering_mode">Change rendering mode</string>
    <string name="editor_remove_transition_question">Do you want to remove this transition?</string>
    <string name="editor_remove_effect_question">Do you want to remove this effect?</string>
    <string name="editor_remove_video_question">Do you want to remove this video clip?</string>
    <string name="editor_remove_image_question">Do you want to remove this image?</string>
    <string name="editor_effect_menu_header">Effect</string>
    <string name="editor_add_effect">Add effect</string>
    <string name="editor_change_effect">Change effect</string>
    <string name="editor_remove_effect">Remove effect</string>
    <string name="editor_pan_zoom_effect">Pan zoom</string>
    <string name="editor_gradient_effect">Gradient</string>
    <string name="editor_sepia_effect">Sepia</string>
    <string name="editor_negative_effect">Negative</string>
    <string name="editor_no_effect">No effect</string>
    <string name="editor_add_begin_transition">Transition into clip</string>
    <string name="editor_add_end_transition">Transition out of clip</string>
    <string name="editor_change_transition">Change transition</string>
    <string name="editor_video_load">The video clip download has started. You\'ll be notified when it completes.</string>
    <string name="editor_image_load">The image download has started. You\'ll be notified when it completes.</string>
    <string name="editor_transition_title">Transition</string>
    <string name="editor_enable_loop_audio_track">Loop</string>
    <string name="editor_disable_loop_audio_track">Don\'t loop</string>
    <string name="editor_mute">Mute</string>
    <string name="editor_unmute">Unmute</string>
    <string name="audio_track_menu_duck">Ducking</string>
    <string name="projects_new_project">Create new project</string>
    <string name="projects_project_name">Project name</string>
    <string name="aspect_ratio_11_9">11 x 9</string>
    <string name="aspect_ratio_16_9">16 x 9</string>
    <string name="aspect_ratio_3_2">3 x 2</string>
    <string name="aspect_ratio_4_3">4 x 3</string>
    <string name="aspect_ratio_5_3">5 x 3</string>
    <string name="editor_storage_not_available">Can\'t create the project because storage isn\'t accessible.</string>
    <string name="editor_create_error">Can\'t create the project because of an error.</string>
    <string name="editor_load_error">Can\'t load the project because of an error. Do you want to delete this project?</string>
    <string name="editor_aspect_ratio_error">Can\'t change the aspect ratio.</string>
    <string name="editor_apply_theme_error">Can\'t apply the theme.</string>
    <string name="export_error">Can\'t export the merged video because of an error.</string>
    <string name="editor_saved_error">Can\'t save the project.</string>
    <string name="editor_release_error">Couldn\'t release the project because of an error.</string>
    <string name="editor_delete_error">Couldn\'t delete the project because of an error.</string>
    <string name="editor_move_media_item_error">Can\'t move the item.</string>
    <string name="editor_remove_media_item_error">Can\'t remove the item.</string>
    <string name="editor_set_rendering_mode_error">Can\'t set the rendering mode.</string>
    <string name="editor_set_media_item_duration_error">Can\'t set the image duration.</string>
    <string name="editor_set_media_item_boundaries_error">Can\'t set the video clip boundaries.</string>
    <string name="editor_add_transition_error">Can\'t add the transition.</string>
    <string name="editor_remove_transition_error">Can\'t remove the transition.</string>
    <string name="editor_set_transition_duration_error">Can\'t set the transition duration.</string>
    <string name="editor_add_overlay_error">Can\'t add the overlay.</string>
    <string name="editor_remove_overlay_error">Can\'t remove the overlay.</string>
    <string name="editor_set_duration_overlay_error">Couldn\'t set the overlay duration.</string>
    <string name="editor_set_start_time_overlay_error">Couldn\'t set the overlay start time.</string>
    <string name="editor_set_user_attributes_overlay_error">Can\'t set overlay attributes.</string>
    <string name="editor_add_effect_error">Can\'t add the effect.</string>
    <string name="editor_remove_effect_error">Can\'t remove the effect.</string>
    <string name="editor_add_audio_track_error">Can\'t add the audio track.</string>
    <string name="editor_remove_audio_track_error">Can\'t remove the audio track.</string>
    <string name="editor_set_audio_track_boundaries_error">Can\'t trim the audio track.</string>
    <string name="editor_transition_too_short">Can\'t add a transition. The transition would be too short.</string>
    <string name="editor_media_load_error">Can\'t download the file.</string>
    <string name="editor_preview_error">Can\'t show the project preview because of an error.</string>
    <string name="export_dialog_export">Export</string>
    <string name="export_dialog_movie_size">Movie size</string>
    <string name="export_dialog_movie_quality">Movie quality</string>
    <string name="export_dialog_movie_quality_low">Low</string>
    <string name="export_dialog_movie_quality_medium">Medium</string>
    <string name="export_dialog_movie_quality_high">High</string>
    <string name="pan_zoom_title">Pan &amp; zoom effect</string>
    <string name="pan_zoom_start">Start</string>
    <string name="pan_zoom_end">End</string>
    <string name="pan_zoom_small_image_error">The image is too small to apply the pan &amp; zoom effect.</string>
    <string name="theme_name_travel">Travel</string>
    <string name="theme_travel_title">My trip to California</string>
    <string name="theme_travel_subtitle">San Francisco</string>
    <string name="theme_name_surfing">Surfing</string>
    <string name="theme_surfing_title">My surfing adventure</string>
    <string name="theme_surfing_subtitle">SF Bay</string>
    <string name="theme_name_film">Film</string>
    <string name="theme_film_title">My short movie</string>
    <string name="theme_film_subtitle">Fun on the Bay</string>
    <string name="theme_name_rock_and_roll">Rock and roll</string>
    <string name="theme_rock_and_roll_title">The concert</string>
    <string name="theme_rock_and_roll_subtitle">Two and a half barrels</string>
    <string name="overlay_preview_center">Centered title</string>
    <string name="overlay_preview_bottom">Bottom title</string>
    <string name="overlay_title">Title</string>
    <string name="overlay_title_sample">My trip</string>
    <string name="overlay_subtitle_sample">San Francisco</string>
    <string name="overlays_select_type">Choose title template</string>
    <string name="overlay_title_label">Title</string>
    <string name="overlay_subtitle_label">Subtitle</string>
    <string name="overlay_change_title_template_button_text">Change template</string>
    <string name="effects_select_effect">Effects</string>
    <string name="effect_pan_zoom">Pan &amp; zoom effect</string>
    <string name="effect_gradient">Gradient effect</string>
    <string name="effect_sepia">Sepia effect</string>
    <string name="effect_negative">Negative effect</string>
    <string name="effect_fifties">Fifties effect</string>
    <string name="transitions_select_transition">Choose transition</string>
    <string name="transitions_alpha_countour">Contour alpha</string>
    <string name="transitions_alpha_diagonal">Diagonal alpha</string>
    <string name="transitions_crossfade">Crossfade</string>
    <string name="transitions_fade_black">Fade to and from black</string>
    <string name="transitions_sliding_right_out_left_in">Sliding right out left in</string>
    <string name="transitions_sliding_left_out_right_in">Sliding left out right in</string>
    <string name="transitions_sliding_top_out_bottom_in">Sliding top out bottom in</string>
    <string name="transitions_sliding_bottom_out_top_in">Sliding bottom out top in</string>
    <string name="transitions_duration"><xliff:g id="seconds">%(,.1f</xliff:g> sec</string>
    <string name="rendering_mode_black_borders">Black borders</string>
    <string name="rendering_mode_stretch">Stretch to fit</string>
    <string name="rendering_mode_crop">Crop</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="untitled">Untitled</string>
    <string name="app_name">My Story</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tell_your_story">TELL OTHERS ABOUT YOUR STORY</string>
    <string name="alert_dialog_story_name">Tell your story</string>
    <string name="cancel">Cancel</string>
    <string name="goto_know">Go to Topics screen</string>
    <string name="signin">Sign In</string>
    <string name="terms_cond_text">I agree to the terms and conditions</string>
    <string name="settings_heading">INFORMATION</string>
    <string name="settings_aboutmystory">ABOUT MY STORY</string>
    <string name="settings_privacy">PRIVACY POLICY</string>
    <string name="settings_rateapp">RATE THE APP</string>
    <string name="settings_copyright">COPYRIGHT</string>
    <string name="settings_terms">TERMS &amp; CONDITIONS</string>
    <string name="settings_logout">Logout</string>
    <string name="finish_delete_text">Are you sure you want to delete this story?</string>
    <string name="finish_del">Delete</string>
    <string name="finish_heading">Finish your Story</string>
    <string name="finish_text">Your Story is not complete, would you like to:</string>
    <string name="finish_delete">Delete and Start over</string>
    <string name="finish_later">Finish Later</string>
    <string name="finish_now">Finish Now</string>
    <string name="online_title">My Story</string>
    <string name="please_select">Please select a topic</string>
    <string name="facebook">"Facebook"</string>
    <string name="google">"Google"</string>
    <string name="twitter">"Twitter"</string>
    <string name="build_no">Version: 1.5 Build no: 21</string>
</resources>