<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvVerseIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="5dp"
            android:padding="7dp"
            android:text="@string/settings_heading"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.5"
            android:background="@drawable/gradient_effect" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="horizontal"
                android:weightSum="2" >

                <Button
                    android:id="@+id/btnAbtMyStory"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/settings_aboutmystory"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btnPrivacyPolicy"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/settings_privacy"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:orientation="horizontal"
                android:weightSum="2" >

                <Button
                    android:id="@+id/btnRateTheApp"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/settings_rateapp"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btnCopyRight"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/settings_copyright"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:orientation="horizontal"
                android:weightSum="2" >

                <Button
                    android:id="@+id/btnTermsandCond"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/settings_terms"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:text="@string/settings_logout"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/btn_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/build_no"
                android:textColor="@color/dark_grey"
                android:textSize="10dp" />
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>