<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@null"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" >

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/llwheel3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="start"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/finish_del"
                        android:textColor="@color/dark_grey"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvDeleteText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="15dp"
                        android:text="@string/finish_delete_text"
                        android:textColor="@color/dark_grey"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="2" >

                <Button
                    android:id="@+id/btn_No"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/black"
                    android:text="@string/no"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_yes"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/yes"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>