<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.test.socialnetwork.SignInActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/btn_signin_back_width"
                android:layout_height="@dimen/btn_signin_back_height"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:src="@drawable/btn_signin_back" />

            <TextView
                android:id="@+id/tvSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/signin"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/sign_in_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/checkbox_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/default_checkbox" />

            <TextView
                android:id="@+id/tvAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@color/white"
                android:text="@string/terms_cond_text"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/terms_cond_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <RelativeLayout
                    android:id="@+id/btn_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/facebook" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_facebook" />

                    <TextView
                        android:id="@+id/tvFb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/facebook"
                        android:textColor="@color/white"
                        android:textSize="14dp" />
                </RelativeLayout>
              
            </RelativeLayout>
            <!-- facebook:login_text="Sign in with Facebook" -->

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
           
                    <RelativeLayout
                    android:id="@+id/btn_google"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/google" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_google" />

                    <TextView
                        android:id="@+id/tvGoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:textSize="14dp"
                        android:textColor="@color/white"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>
            </RelativeLayout> 

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                     <RelativeLayout
                    android:id="@+id/btn_twitter"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/twitter" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_twitter" />

                    <TextView
                        android:id="@+id/tvTwitt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twitter"
                        android:textSize="14dp"
                        android:textColor="@color/white"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left" >

        <Button
            android:id="@+id/btn_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_home" />
    </RelativeLayout>

</RelativeLayout>